# codec-finetuning

./: .gitignore  BENCHMARK_RESULTS.md  CONTRIBUTING.md  LICENSE  OPTIMIZERS.md  README.md  agents.md  prepare_data.py  pyproject.toml
configs/: base.yaml
configs/codecs/: dualcodec.yaml  kanade.yaml  mimi.yaml
configs/datasets/: hindi.yaml  lahaja.yaml  turkish_full.yaml  turkish_sample.yaml
configs/experiments/: dualcodec_hindi.yaml  dualcodec_hindi_baseline.yaml  dualcodec_hindi_decoder_ft.yaml  dualcodec_lahaja_baseline.yaml  dualcodec_turkish_cv_baseline.yaml  dualcodec_turkish_cv_decoder_ft.yaml  dualcodec_turkish_full.yaml  dualcodec_turkish_full_baseline.yaml  dualcodec_turkish_openslr_baseline.yaml  dualcodec_turkish_sample.yaml  kanade_hindi.yaml  kanade_turkish_full.yaml  kanade_turkish_sample.yaml  mimi_hindi.yaml  mimi_hindi_baseline.yaml  mimi_hindi_decoder_ft.yaml  mimi_hindi_ft.yaml  mimi_lahaja.yaml  mimi_lahaja_baseline.yaml  mimi_turkish_cv_baseline.yaml  mimi_turkish_cv_decoder_ft.yaml  mimi_turkish_cv_ft.yaml  mimi_turkish_eval.yaml  mimi_turkish_full.yaml  mimi_turkish_full_baseline.yaml  mimi_turkish_openslr_baseline.yaml  mimi_turkish_sample.yaml  mimi_turkish_sample_best.yaml
configs/sweeps/: dualcodec_sweep.yaml  kanade_sweep.yaml  mimi_sweep.yaml
eval/: __init__.py  _audio_compat.py  _protobuf_compat.py  bootstrap_eval.py  codec_registry.py  log_to_wandb.py  measure_ssnr.py  measure_ttfat.py  reconstruct.py  run_all.py  run_versa.sh  versa_score_config.yaml
results/: TRAINING_RUNS.md  baseline-benchmark.md  finetuning-analysis.md  mimi_hindi_eval_report.txt  mimi_hindi_eval_state.json  mimi_hindi_metrics.json  mimi_hindi_run_all.json  mimi_hindi_ssnr.json  mimi_hindi_ttfat.json  mimi_hindi_versa.json  mimi_lahaja_eval_state.json  mimi_lahaja_metrics.json  mimi_lahaja_ssnr.json  mimi_lahaja_ttfat.json
scripts/: analyze_sweep.py  download_data.sh  download_turkish_full.sh  prepare_lahaja.py  run_all.sh  run_sweep.sh  setup.sh
tests/: test_repo_standards.py
train/: __init__.py  config_loader.py  optimizer_factory.py  sweep_agent.py  train_dualcodec.sh  train_dualcodec_decoder.py  train_kanade.sh  train_mimi.py
train/utils/: __init__.py  augmentation.py  discriminator.py  ema.py  loss_balancer.py  muon.py
