[project]
name = "codec-finetuning"
version = "0.1.0"
requires-python = ">=3.12"
description = "Benchmark fine-tuning of neural speech codecs (Mimi, DualCodec, Kanade) on low-resource languages"
license = { text = "MIT" }
authors = [{ name = "codec-finetuning contributors" }]
readme = "README.md"
dependencies = [
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "moshi>=0.2.13",
    "dualcodec>=0.4.2",
    "kanade-tokenizer",
    "transformers>=4.46.0",
    "huggingface-hub>=0.25.0",
    "safetensors>=0.4.0",
    "einops>=0.8.0",
    "numpy>=1.26.0,<2.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "scipy>=1.12.0",
    "tqdm",
    "pyyaml",
    "wandb>=0.19.0",
    "torchcodec>=0.9.0",
]

[project.optional-dependencies]
train = [
    "accelerate>=1.2.0",
    "lightning>=2.5.0",
    "hydra-core>=1.3.0",
    "vocos>=0.1.0",
    "datasets>=3.0.0",
    "lion-pytorch>=0.2.0",
    "prodigyopt>=1.0",
    "schedulefree>=1.0",
    "adan-pytorch>=0.1.0",
]
dev = [
    "ruff>=0.9.0",
]
eval = [
    "pesq>=0.0.4",
    "pystoi>=0.4.0",
    "speechmos>=0.0.1",
    "jiwer>=3.0.0",
    "openai-whisper",
    "setuptools<81",
    "flash-attn>=2.5.0; platform_machine != 'aarch64'",
    "versa-speech-audio-toolkit",
    "pysepm",
    "SRMRpy",
    "fadtk-versa",
    "msclap",
    "wvmos",
    "fairseq",
    "tensorboardX>=2.6",
    "scoreq-versa",
    "nomad-versa",
    "emo2vec-versa",
    "utmosv2",
]
# Convenience extra: installs train + eval + dev in one shot.
# Recommended for contributors: `uv sync --extra all`
all = [
    "codec-finetuning[train,eval,dev]",
]
# NOTE: visqol requires a C++ bazel build and cannot be declared as a
# regular dependency. Install manually:
#   git clone https://github.com/google/visqol.git && cd visqol
#   echo 'build --linkopt=-lstdc++fs' >> .bazelrc && echo '5.1.0' > .bazelversion
#   PYTHON_BIN_PATH=.venv/bin/python bazel build -c opt //python:visqol_lib_py.so
#   pip install .
#
# Noresqa models must be fetched after install:
#   wget -P $(python -c "import versa,os;print(os.path.dirname(versa.__file__))")/../../tools/Noresqa/models \
#     https://github.com/facebookresearch/Noresqa/raw/main/models/model_noresqa_mos.pth \
#     https://github.com/facebookresearch/Noresqa/raw/main/models/model_noresqa.pth
#
# UTMOSv2 LFS weights: cd <utmosv2-clone> && git lfs pull && ln -s $(pwd) ~/.cache/utmosv2

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" },
    { index = "pytorch-cu126", marker = "platform_machine != 'aarch64'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" },
    { index = "pytorch-cu126", marker = "platform_machine != 'aarch64'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" },
    { index = "pytorch-cu126", marker = "platform_machine != 'aarch64'" },
]
kanade-tokenizer = { git = "https://github.com/frothywater/kanade-tokenizer" }
versa-speech-audio-toolkit = { git = "https://github.com/shinjiwlab/versa.git" }
pysepm = { git = "https://github.com/ftshijt/pysepm.git" }
SRMRpy = { git = "https://github.com/shimhz/SRMRpy.git" }
fadtk-versa = { git = "https://github.com/ftshijt/fadtk.git" }
msclap = { git = "https://github.com/ftshijt/CLAP.git" }
wvmos = { git = "https://github.com/AndreevP/wvmos.git" }
fairseq = { git = "https://github.com/ftshijt/fairseq.git", branch = "versa" }
scoreq-versa = { git = "https://github.com/ftshijt/scoreq.git" }
nomad-versa = { git = "https://github.com/shimhz/nomad.git" }
emo2vec-versa = { git = "https://github.com/ftshijt/emotion2vec.git" }
utmosv2 = { git = "https://github.com/ftshijt/UTMOSv2.git" }
torchcodec = [
    { index = "pytorch-cu128", marker = "platform_machine == 'aarch64'" },
    { index = "pytorch-cu126", marker = "platform_machine != 'aarch64'" },
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.uv]
# Override transitive deps that have conflicting URLs or version constraints.
# - pysepm pins SRMRpy/pesq to zip URLs; we use our git sources instead.
# - descript-audiotools needs protobuf<3.20, versa needs >=4.21; force modern.
override-dependencies = [
    "SRMRpy @ git+https://github.com/shimhz/SRMRpy.git",
    "pesq @ git+https://github.com/ludlows/python-pesq.git",
    "msclap @ git+https://github.com/ftshijt/CLAP.git",
    "protobuf>=4.21.1,<7",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["train", "eval"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"
